k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hjtpx
  labels:
    name: hjtpx
    environment: production
    app.kubernetes.io/name: hjtpx
