k8s/serverless-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: serverless
  labels:
    name: serverless
    environment: production
